# mysqldump-to-parquet

./: .gitignore  Cargo.toml  README.md
src/: line_parser.rs  main.rs  parquet_writer.rs
