[package]
name = "mysqldump-to-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
crossbeam = "0.8"
parquet = "50"
arrow = "50"
color-eyre = "0.6"
flate2 = "1.0.24"
sqlparser = "0.41"
